# SoftRenderer

./: CMakeLists.txt
src/: CMakeLists.txt  算法参考教程.md
src/0_Start/: 0_drawPoints.cpp
src/1_DrawLine/: Bresenham直线算法.md  DDA数值微分法.md  drawline.cpp
utility/: CMakeLists.txt  tgaimage类说明.md
